# eval-comparison

./: =1.25.2  EvaluatingLlmSurveyPaperDataset_query_llama3.1_eval_llama3.csv  EvaluatingLlmSurveyPaperDataset_query_llama3_eval_llama3.1.txt  HistoryOfAlexnetDataset_query_llama3.1_eval_llama3.csv  HistoryOfAlexnetDataset_query_llama3.1_eval_llama3.txt  HistoryOfAlexnetDataset_query_llama3_eval_llama3.1.csv  HistoryOfAlexnetDataset_query_llama3_eval_llama3.1.txt  Readme.md  comparison.py  default.sqlite  pyproject.toml  ragas_evaluation.csv  ragas_evaluation.py  ragas_evaluation_llama3_as_eval.csv  requirements.txt  timing_results.txt  timing_results_llama3.1_as_eval.txt  timing_results_llama3_as_eval.txt  trulens.py
opik_eval/: main.py  readme.md
results/: EvaluatingLlmSurveyPaperDataset_query_llama3.1_eval_llama3.txt  EvaluatingLlmSurveyPaperDataset_query_llama3_eval_llama3.1.csv  HistoryOfAlexnetDataset_query_llama3.1_eval_llama3.1.csv  HistoryOfAlexnetDataset_query_llama3.1_eval_llama3.1.txt  HistoryOfAlexnetDataset_query_llama3.1_eval_llama3.csv  HistoryOfAlexnetDataset_query_llama3.1_eval_llama3.txt  HistoryOfAlexnetDataset_query_llama3_eval_llama3.csv  HistoryOfAlexnetDataset_query_llama3_eval_llama3.txt  MiniTruthfulQADataset_query_llama3.1_eval_llama3.1.csv  MiniTruthfulQADataset_query_llama3.1_eval_llama3.1.txt  MiniTruthfulQADataset_query_llama3.1_eval_llama3.csv  MiniTruthfulQADataset_query_llama3.1_eval_llama3.txt  MiniTruthfulQADataset_query_llama3_eval_llama3.1.csv  MiniTruthfulQADataset_query_llama3_eval_llama3.1.txt  ragas_evaluation_llama3.1_as_eval.csv  (+14 more)
