[tool.poetry]
name = "llamadatasets"
version = "0.1.0"
description = ""
authors = ["anand-kamble <amk23j@fsu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
llama-index = "^0.10.45.post1"
llama-index-embeddings-huggingface = "^0.2.1"
llama-index-embeddings-instructor = "^0.1.3"
trulens-eval = "^0.31.0"
llama-index-llms-ollama = "^0.1.5"
litellm = ">=1.25.2"
ragas = "^0.1.9"
llama-index-embeddings-ollama = "^0.1.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
